objects/RenMaint_Account__c.object
<CustomObject>
    <description>The accounts related to RenMaint Quote</description>
    <fields>
        <fullName>Account_Extended_Amount_Format__c</fullName>
        <formula>Quote_Name__r.Quote_Currency__r.Symbol__c &amp;&apos; &apos;&amp; IF(Account_Extended_Amount__c&lt; 0,&quot;-&quot;,&quot;&quot;) &amp; IF(abs(Account_Extended_Amount__c)&gt;= 1000000, TEXT(FLOOR(round(Account_Extended_Amount__c ,0) / 1000000)) &amp; &quot;,&quot;,&quot;&quot;) &amp; 
IF( abs(Account_Extended_Amount__c) &gt;= 1000, RIGHT(TEXT(FLOOR(round(Account_Extended_Amount__c ,0) / 1000)), 3) &amp; &quot;,&quot;,&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(round(Account_Extended_Amount__c ,0))), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Extended Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Extended_Amount__c</fullName>
        <label>Account Extended Amount</label>
        <summarizedField>RenMaint_System__c.System_Extended_Amount__c</summarizedField>
        <summaryForeignKey>RenMaint_System__c.RenMaint_Account_Name__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RenMaint Accounts</relationshipLabel>
        <relationshipName>RenMaint_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>RenMaint Accounts</relationshipLabel>
        <relationshipName>RenMaint_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Num_of_Systems__c</fullName>
        <label># of Systems</label>
        <summaryForeignKey>RenMaint_System__c.RenMaint_Account_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_SAP__c</fullName>
        <formula>Account_Name__r.Parent.Primary_Account__r.SAP_Customer_ID_Mask__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Name__c</fullName>
        <description>Displays the name of Quote to which the RenMaint account is related to</description>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>RenMaint Accounts</relationshipLabel>
        <relationshipName>RenMaint_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ROW_ID__c</fullName>
        <description>It will contain the details of the migrated Records</description>
        <externalId>true</externalId>
        <label>ROW ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Id__c</fullName>
        <label>SAP Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>RenMaint Accounts</relationshipLabel>
        <relationshipName>RenMaint_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMigrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show  that record is migrated or not</description>
        <label>isMigrated</label>
        <type>Checkbox</type>
    </fields>
    <label>RenMaint Account</label>
    <nameField>
        <label>SAP Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RenMaint Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>